welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:3: error: not found: value faireMotif1
	faireMotif1(Color.red);
        ^PatternPicture:5: error: not found: value faireMotif2
	faireMotif2(Color.blue);
        ^PatternPicture:10: error: not found: value faireMotif2
	faireMotif2(Color.yellow);
        ^PatternPicture:12: error: not found: value faireMotif1
	faireMotif1(Color.green);
        ^PatternPicture:28: error: not found: value faireMotif2
	faireMotif2(Color.blue, false);
        ^PatternPicture:50: error: value à is not a member of Int
	for(i <- 1 à 2) {
                   ^