welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
	avance();
	faireMotif1(Color.red);
	avance();
	faireMotif2(Color.blue);
	recule(2);
	gauche();
	avance(2);
	droite();
	faireMotif2(Color.yellow);
	avance(3);
	faireMotif1(Color.green);
}


/**
 * Permet de dessiner le motif suivant :
 * 		
 * 		-	X	X	-
 * 		X	-	-	X
 * 		X	- 	-	X
 * 		-	X	X	-
 * 	
 */
def faireMotifComplet() {
	faireMotif(Color.red, true);
	avance(2);
	faireMotif2(Color.blue, false);
	recule(2);
	gauche();
	avance(2);
}

/**
 * Permet de dessiner le motif suivant :
 * 		
 * 		b	!b 
 * 		!b	b
 * 	
 * 	c:Color	: couleur du motif dessiné
 * 	b:Boolean	: cases colorier
 */
def faireMotif(c:Color, b:Boolean) {
	var i:Int = 0;
	setCouleurBrosse(c);
	if(b) {
		avance();
	}
	marqueSol();
	for(i <- 1 à 2) {
		gauche();
		avance();
	}
	if(b) {
		marqueSol();
	}
	gauche();
	avance();
	gauche();
}

def marqueSol() {
	baisseBrosse();
	leveBrosse();	
}
